--- a/project.css
+++ b/project.css
@@ -7,25 +7,28 @@ a:hover {
     text-decoration: none;
     color:green;
 }
+
 body > img{
     margin-right: 10%;
 }
+
 body{
-    background-color:white;
+
+    background-color: white;
 }
 header > p{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bolder;
     color: brown;
-    margin-top: ;
+    margin-top: 2;
     margin-bottom: ;
-    margin-left: ;
+    margin-left: 10;
     margin-right: ;
-    background-color:white;
-   border: 5px solid white;
+    
    
 }
 div > p {
+    box-shadow: -20px 5px olivedrab;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
     font-weight: bold;
     margin-top:5% ;
@@ -35,6 +38,8 @@ div > p {
     font-size: 5em;
     background-color:whitesmoke;
    border: 2px solid whitesmoke;
+   
+   
     
 }
 div > img{
@@ -72,4 +77,52 @@ ul{
     margin-bottom: ;
     margin-left: 20%;
     margin-right: 20%;
+}
+h1{
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(120,111,168,1) 100%, rgba(0,125,255,1) 100%);
+    height: 300px;
+    font-family: ecriture;
+    color: beige;
+
+   
+}
+h2{
+    background-color: white;
+    height: 200px;  
+}
+h3{ 
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(120,111,168,1) 100%, rgba(0,125,255,1) 100%);
+    height: 100px;
+    color: white;
+}
+
+@font-face{
+    font-family: ecriture;
+    src: url("ShantellSans-SemiBoldItalic.ttf");
+
+}
+
+.photos{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px
+}
+.Musique{
+color: blanchedalmond;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 50;
+  background-image: url("image/IBR.jpg");
+}
+.Dance{
+  color: blanchedalmond;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 50;
+  background-image: url("image/BR.JPG");
+
 }
